welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:10: error: ';' expected but 'if' found.
  }if else(c>d){
   ^